add vs extensions

--- a/Container Tools/devbox.yaml
+++ b/Container Tools/devbox.yaml
@@ -21,15 +21,16 @@ setupTasks:
   - task: install-vs-extension
     inputs:
       extension: GitHub.copilotvs
+  - task: install-vs-extension
+    inputs:
+      extension: ms-azuretools.vscode-bicep
   # - task: install-vs-extension
   #   inputs:
   #     extension: GitHub.copilot-chat
   # - task: install-vs-extension
   #   inputs:
   #     extension: GitHub.copilot-chat
-  # - task: install-vs-extension
-  #   inputs:
-  #     extension: ms-azuretools.vscode-bicep
+
   # - task: install-vs-extension
   #   inputs:
   #     extension: github.vscode-github-actions    
