--- a/Container Tools/devbox.yaml
+++ b/Container Tools/devbox.yaml
@@ -24,16 +24,12 @@ setupTasks:
   - task: install-vscode-extension
     inputs:
       extension: GitHub.copilot
-  # - task: install-vs-extension
-  #   inputs:
-  #     extension: GitHub.copilot-chat
-  # - task: install-vs-extension
-  #   inputs:
-  #     extension: GitHub.copilot-chat
-
-  # - task: install-vs-extension
-  #   inputs:
-  #     extension: github.vscode-github-actions    
-  # - task: install-vs-extension
-  #   inputs:
-  #     extension: ms-toolsai.jupyter
+  - task: install-vscode-extension
+    inputs:
+      extension: GitHub.copilot-chat
+  - task: install-vscode-extension
+    inputs:
+      extension: github.vscode-github-actions
+  - task: install-vscode-extension
+    inputs:
+      extension: ms-toolsai.jupyter
