--- a/Container Tools/devbox.yaml
+++ b/Container Tools/devbox.yaml
@@ -18,15 +18,15 @@ setupTasks:
   - task: choco
     inputs:
       install: azd
-  - task: install-vscode-extension
-    inputs:
-      extension: GitHub.copilot
-  - task: install-vscode-extension
-    inputs:
-      extension: GitHub.copilot-chat
-  - task: install-vscode-extension
-    inputs:
-      extension: github.vscode-github-actions
-  - task: install-vscode-extension
-    inputs:
-      extension: ms-toolsai.jupyter
+  # - task: install-vscode-extension
+  #   inputs:
+  #     extension: GitHub.copilot
+  # - task: install-vscode-extension
+  #   inputs:
+  #     extension: GitHub.copilot-chat
+  # - task: install-vscode-extension
+  #   inputs:
+  #     extension: github.vscode-github-actions
+  # - task: install-vscode-extension
+  #   inputs:
+  #     extension: ms-toolsai.jupyter
